// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create a queue 1`] = `
Object {
  "app.wsim/simulator.json": Object {
    "resources": Array [
      Object {
        "attrs": Object {},
        "path": "root/WingLogger",
        "props": Object {},
        "type": "wingsdk.cloud.Logger",
      },
      Object {
        "attrs": Object {},
        "path": "root/my_queue",
        "props": Object {
          "initialMessages": Array [],
          "subscribers": Array [],
          "timeout": 30,
        },
        "type": "wingsdk.cloud.Queue",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "app.wsim/tree.json": Object {
    "tree": Object {
      "children": Object {
        "WingLogger": Object {
          "attributes": Object {
            "wing:resource:connections": Array [],
            "wing:resource:stateful": true,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.1.228",
          },
          "display": Object {
            "description": "A cloud logging facility",
            "hidden": true,
            "title": "Logger",
          },
          "id": "WingLogger",
          "path": "root/WingLogger",
        },
        "my_queue": Object {
          "attributes": Object {
            "wing:resource:connections": Array [],
            "wing:resource:stateful": true,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.1.228",
          },
          "display": Object {
            "description": "A distributed message queue",
            "title": "Queue",
          },
          "id": "my_queue",
          "path": "root/my_queue",
        },
      },
      "constructInfo": Object {
        "fqn": "constructs.Construct",
        "version": "10.1.228",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
  "tree.json": Object {
    "tree": Object {
      "children": Object {
        "WingLogger": Object {
          "attributes": Object {
            "wing:resource:connections": Array [],
            "wing:resource:stateful": true,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.1.228",
          },
          "display": Object {
            "description": "A cloud logging facility",
            "hidden": true,
            "title": "Logger",
          },
          "id": "WingLogger",
          "path": "root/WingLogger",
        },
        "my_queue": Object {
          "attributes": Object {
            "wing:resource:connections": Array [],
            "wing:resource:stateful": true,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.1.228",
          },
          "display": Object {
            "description": "A distributed message queue",
            "title": "Queue",
          },
          "id": "my_queue",
          "path": "root/my_queue",
        },
      },
      "constructInfo": Object {
        "fqn": "constructs.Construct",
        "version": "10.1.228",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`messages are requeued if the function fails 1`] = `
Array [
  "wingsdk.cloud.Logger created.",
  "wingsdk.cloud.Function created.",
  "wingsdk.cloud.Queue created.",
  "Push (message=BAD MESSAGE).",
  "Sending messages (messages=[\\"BAD MESSAGE\\"], subscriber=sim-1).",
  "Invoke (payload=\\"\\"{\\\\\\"messages\\\\\\":[\\\\\\"BAD MESSAGE\\\\\\"]}\\"\\").",
  "Subscriber error - returning 1 messages to queue.",
  "Sending messages (messages=[\\"BAD MESSAGE\\"], subscriber=sim-1).",
  "Invoke (payload=\\"\\"{\\\\\\"messages\\\\\\":[\\\\\\"BAD MESSAGE\\\\\\"]}\\"\\").",
  "Subscriber error - returning 1 messages to queue.",
  "Sending messages (messages=[\\"BAD MESSAGE\\"], subscriber=sim-1).",
  "Invoke (payload=\\"\\"{\\\\\\"messages\\\\\\":[\\\\\\"BAD MESSAGE\\\\\\"]}\\"\\").",
  "Subscriber error - returning 1 messages to queue.",
  "wingsdk.cloud.Queue deleted.",
  "wingsdk.cloud.Function deleted.",
  "wingsdk.cloud.Logger deleted.",
]
`;

exports[`messages are requeued if the function fails 2`] = `
Object {
  "app.wsim/simulator.json": Object {
    "resources": Array [
      Object {
        "attrs": Object {},
        "path": "root/WingLogger",
        "props": Object {},
        "type": "wingsdk.cloud.Logger",
      },
      Object {
        "attrs": Object {},
        "path": "root/my_queue-OnMessage-e645076f",
        "props": Object {
          "environmentVariables": Object {
            "LOGGER_HANDLE_76f7e65b": "\${root/WingLogger#attrs.handle}",
          },
          "sourceCodeFile": "assets/my_queue-onmessage-e645076f_c89a8f49/index.js",
          "sourceCodeLanguage": "javascript",
          "timeout": 60000,
        },
        "type": "wingsdk.cloud.Function",
      },
      Object {
        "attrs": Object {},
        "path": "root/my_queue",
        "props": Object {
          "initialMessages": Array [],
          "subscribers": Array [
            Object {
              "batchSize": 1,
              "functionHandle": "\${root/my_queue-OnMessage-e645076f#attrs.handle}",
            },
          ],
          "timeout": 30,
        },
        "type": "wingsdk.cloud.Queue",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "app.wsim/tree.json": Object {
    "tree": Object {
      "children": Object {
        "Handler": Object {
          "attributes": Object {
            "wing:resource:connections": Array [
              Object {
                "direction": "inbound",
                "implicit": false,
                "relationship": "handle",
                "resource": "root/my_queue-OnMessage-e645076f",
              },
            ],
            "wing:resource:stateful": false,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.1.228",
          },
          "display": Object {
            "description": "An inflight resource",
            "hidden": true,
            "title": "Inflight",
          },
          "id": "Handler",
          "path": "root/Handler",
        },
        "WingLogger": Object {
          "attributes": Object {
            "wing:resource:connections": Array [
              Object {
                "direction": "inbound",
                "implicit": true,
                "relationship": "print",
                "resource": "root/my_queue-OnMessage-e645076f",
              },
            ],
            "wing:resource:stateful": true,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.1.228",
          },
          "display": Object {
            "description": "A cloud logging facility",
            "hidden": true,
            "title": "Logger",
          },
          "id": "WingLogger",
          "path": "root/WingLogger",
        },
        "my_queue": Object {
          "attributes": Object {
            "wing:resource:connections": Array [
              Object {
                "direction": "outbound",
                "implicit": false,
                "relationship": "on_message",
                "resource": "root/my_queue-OnMessage-e645076f",
              },
            ],
            "wing:resource:stateful": true,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.1.228",
          },
          "display": Object {
            "description": "A distributed message queue",
            "title": "Queue",
          },
          "id": "my_queue",
          "path": "root/my_queue",
        },
        "my_queue-OnMessage-e645076f": Object {
          "attributes": Object {
            "wing:resource:connections": Array [
              Object {
                "direction": "outbound",
                "implicit": false,
                "relationship": "handle",
                "resource": "root/Handler",
              },
              Object {
                "direction": "outbound",
                "implicit": true,
                "relationship": "print",
                "resource": "root/WingLogger",
              },
              Object {
                "direction": "inbound",
                "implicit": false,
                "relationship": "on_message",
                "resource": "root/my_queue",
              },
            ],
            "wing:resource:stateful": false,
          },
          "children": Object {
            "Code": Object {
              "constructInfo": Object {
                "fqn": "constructs.Construct",
                "version": "10.1.228",
              },
              "id": "Code",
              "path": "root/my_queue-OnMessage-e645076f/Code",
            },
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.1.228",
          },
          "display": Object {
            "description": "A cloud function (FaaS)",
            "title": "Function",
          },
          "id": "my_queue-OnMessage-e645076f",
          "path": "root/my_queue-OnMessage-e645076f",
        },
        "my_queue-OnMessageHandler-e645076f": Object {
          "attributes": Object {
            "wing:resource:connections": Array [],
            "wing:resource:stateful": false,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.1.228",
          },
          "id": "my_queue-OnMessageHandler-e645076f",
          "path": "root/my_queue-OnMessageHandler-e645076f",
        },
      },
      "constructInfo": Object {
        "fqn": "constructs.Construct",
        "version": "10.1.228",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
  "assets/my_queue-onmessage-e645076f_c89a8f49/index.js": "var __defProp = Object.defineProperty;
var __getOwnPropDesc = Object.getOwnPropertyDescriptor;
var __getOwnPropNames = Object.getOwnPropertyNames;
var __hasOwnProp = Object.prototype.hasOwnProperty;
var __esm = (fn, res) => function __init() {
  return fn && (res = (0, fn[__getOwnPropNames(fn)[0]])(fn = 0)), res;
};
var __export = (target, all) => {
  for (var name in all)
    __defProp(target, name, { get: all[name], enumerable: true });
};
var __copyProps = (to, from, except, desc) => {
  if (from && typeof from === \\"object\\" || typeof from === \\"function\\") {
    for (let key of __getOwnPropNames(from))
      if (!__hasOwnProp.call(to, key) && key !== except)
        __defProp(to, key, { get: () => from[key], enumerable: !(desc = __getOwnPropDesc(from, key)) || desc.enumerable });
  }
  return to;
};
var __toCommonJS = (mod) => __copyProps(__defProp({}, \\"__esModule\\", { value: true }), mod);

var queue_onmessage_inflight_exports = {};
__export(queue_onmessage_inflight_exports, {
  QueueOnMessageHandlerClient: () => QueueOnMessageHandlerClient
});
var QueueOnMessageHandlerClient;
var init_queue_onmessage_inflight = __esm({
  \\"[REDACTED]/wingsdk/src/target-sim/queue.onmessage.inflight.ts\\"() {
    \\"use strict\\";
    QueueOnMessageHandlerClient = class {
      constructor({ handler }) {
        this.handler = handler;
      }
      async handle(event) {
        let parsed = JSON.parse(event);
        if (!parsed.messages)
          throw new Error('No \\"messages\\" field in event.');
        for (const $message of parsed.messages) {
          await this.handler.handle($message);
        }
      }
    };
  }
});

var $logger = function(env) {
  let handle = process.env[env];
  if (!handle) {
    throw new Error(\\"Missing environment variable: \\" + env);
  }
  return $simulator.findInstance(handle);
}(\\"LOGGER_HANDLE_76f7e65b\\");
console.log = (...args) => $logger.print(...args);
exports.handler = async function(event) {
  return await new (init_queue_onmessage_inflight(), __toCommonJS(queue_onmessage_inflight_exports)).QueueOnMessageHandlerClient({ handler: new (function() {
    return class Handler {
      constructor(clients) {
        for (const [name, client] of Object.entries(clients)) {
          this[name] = client;
        }
      }
      async handle(message) {
        if (message === \\"BAD MESSAGE\\") {
          throw new Error(\\"ERROR\\");
        }
      }
    };
  }())({}) }).handle(event);
};
",
  "tree.json": Object {
    "tree": Object {
      "children": Object {
        "Handler": Object {
          "attributes": Object {
            "wing:resource:connections": Array [
              Object {
                "direction": "inbound",
                "implicit": false,
                "relationship": "handle",
                "resource": "root/my_queue-OnMessage-e645076f",
              },
            ],
            "wing:resource:stateful": false,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.1.228",
          },
          "display": Object {
            "description": "An inflight resource",
            "hidden": true,
            "title": "Inflight",
          },
          "id": "Handler",
          "path": "root/Handler",
        },
        "WingLogger": Object {
          "attributes": Object {
            "wing:resource:connections": Array [
              Object {
                "direction": "inbound",
                "implicit": true,
                "relationship": "print",
                "resource": "root/my_queue-OnMessage-e645076f",
              },
            ],
            "wing:resource:stateful": true,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.1.228",
          },
          "display": Object {
            "description": "A cloud logging facility",
            "hidden": true,
            "title": "Logger",
          },
          "id": "WingLogger",
          "path": "root/WingLogger",
        },
        "my_queue": Object {
          "attributes": Object {
            "wing:resource:connections": Array [
              Object {
                "direction": "outbound",
                "implicit": false,
                "relationship": "on_message",
                "resource": "root/my_queue-OnMessage-e645076f",
              },
            ],
            "wing:resource:stateful": true,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.1.228",
          },
          "display": Object {
            "description": "A distributed message queue",
            "title": "Queue",
          },
          "id": "my_queue",
          "path": "root/my_queue",
        },
        "my_queue-OnMessage-e645076f": Object {
          "attributes": Object {
            "wing:resource:connections": Array [
              Object {
                "direction": "outbound",
                "implicit": false,
                "relationship": "handle",
                "resource": "root/Handler",
              },
              Object {
                "direction": "outbound",
                "implicit": true,
                "relationship": "print",
                "resource": "root/WingLogger",
              },
              Object {
                "direction": "inbound",
                "implicit": false,
                "relationship": "on_message",
                "resource": "root/my_queue",
              },
            ],
            "wing:resource:stateful": false,
          },
          "children": Object {
            "Code": Object {
              "constructInfo": Object {
                "fqn": "constructs.Construct",
                "version": "10.1.228",
              },
              "id": "Code",
              "path": "root/my_queue-OnMessage-e645076f/Code",
            },
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.1.228",
          },
          "display": Object {
            "description": "A cloud function (FaaS)",
            "title": "Function",
          },
          "id": "my_queue-OnMessage-e645076f",
          "path": "root/my_queue-OnMessage-e645076f",
        },
        "my_queue-OnMessageHandler-e645076f": Object {
          "attributes": Object {
            "wing:resource:connections": Array [],
            "wing:resource:stateful": false,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.1.228",
          },
          "id": "my_queue-OnMessageHandler-e645076f",
          "path": "root/my_queue-OnMessageHandler-e645076f",
        },
      },
      "constructInfo": Object {
        "fqn": "constructs.Construct",
        "version": "10.1.228",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`queue batch size of 2, purge the queue 1`] = `
Array [
  "wingsdk.cloud.Logger created.",
  "wingsdk.cloud.Queue created.",
  "Push (message=A).",
  "Push (message=B).",
  "ApproxSize ().",
  "Purge ().",
  "ApproxSize ().",
  "wingsdk.cloud.Queue deleted.",
  "wingsdk.cloud.Logger deleted.",
]
`;

exports[`queue batch size of 2, purge the queue 2`] = `
Object {
  "app.wsim/simulator.json": Object {
    "resources": Array [
      Object {
        "attrs": Object {},
        "path": "root/WingLogger",
        "props": Object {},
        "type": "wingsdk.cloud.Logger",
      },
      Object {
        "attrs": Object {},
        "path": "root/my_queue",
        "props": Object {
          "initialMessages": Array [],
          "subscribers": Array [],
          "timeout": 30,
        },
        "type": "wingsdk.cloud.Queue",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "app.wsim/tree.json": Object {
    "tree": Object {
      "children": Object {
        "WingLogger": Object {
          "attributes": Object {
            "wing:resource:connections": Array [],
            "wing:resource:stateful": true,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.1.228",
          },
          "display": Object {
            "description": "A cloud logging facility",
            "hidden": true,
            "title": "Logger",
          },
          "id": "WingLogger",
          "path": "root/WingLogger",
        },
        "my_queue": Object {
          "attributes": Object {
            "wing:resource:connections": Array [],
            "wing:resource:stateful": true,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.1.228",
          },
          "display": Object {
            "description": "A distributed message queue",
            "title": "Queue",
          },
          "id": "my_queue",
          "path": "root/my_queue",
        },
      },
      "constructInfo": Object {
        "fqn": "constructs.Construct",
        "version": "10.1.228",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
  "tree.json": Object {
    "tree": Object {
      "children": Object {
        "WingLogger": Object {
          "attributes": Object {
            "wing:resource:connections": Array [],
            "wing:resource:stateful": true,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.1.228",
          },
          "display": Object {
            "description": "A cloud logging facility",
            "hidden": true,
            "title": "Logger",
          },
          "id": "WingLogger",
          "path": "root/WingLogger",
        },
        "my_queue": Object {
          "attributes": Object {
            "wing:resource:connections": Array [],
            "wing:resource:stateful": true,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.1.228",
          },
          "display": Object {
            "description": "A distributed message queue",
            "title": "Queue",
          },
          "id": "my_queue",
          "path": "root/my_queue",
        },
      },
      "constructInfo": Object {
        "fqn": "constructs.Construct",
        "version": "10.1.228",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`queue with one subscriber, batch size of 5 1`] = `
Array [
  "wingsdk.cloud.Logger created.",
  "wingsdk.cloud.Function created.",
  "wingsdk.cloud.Queue created.",
  "Sending messages (messages=[\\"A\\",\\"B\\",\\"C\\",\\"D\\",\\"E\\"], subscriber=sim-1).",
  "Sending messages (messages=[\\"F\\"], subscriber=sim-1).",
  "Invoke (payload=\\"\\"{\\\\\\"messages\\\\\\":[\\\\\\"F\\\\\\"]}\\"\\").",
  "Invoke (payload=\\"\\"{\\\\\\"messages\\\\\\":[\\\\\\"A\\\\\\",\\\\\\"B\\\\\\",\\\\\\"C\\\\\\",\\\\\\"D\\\\\\",\\\\\\"E\\\\\\"]}\\"\\").",
  "wingsdk.cloud.Queue deleted.",
  "wingsdk.cloud.Function deleted.",
  "wingsdk.cloud.Logger deleted.",
]
`;

exports[`queue with one subscriber, batch size of 5 2`] = `
Object {
  "app.wsim/simulator.json": Object {
    "resources": Array [
      Object {
        "attrs": Object {},
        "path": "root/WingLogger",
        "props": Object {},
        "type": "wingsdk.cloud.Logger",
      },
      Object {
        "attrs": Object {},
        "path": "root/my_queue-OnMessage-e645076f",
        "props": Object {
          "environmentVariables": Object {
            "LOGGER_HANDLE_76f7e65b": "\${root/WingLogger#attrs.handle}",
          },
          "sourceCodeFile": "assets/my_queue-onmessage-e645076f_c89a8f49/index.js",
          "sourceCodeLanguage": "javascript",
          "timeout": 60000,
        },
        "type": "wingsdk.cloud.Function",
      },
      Object {
        "attrs": Object {},
        "path": "root/my_queue",
        "props": Object {
          "initialMessages": Array [
            "A",
            "B",
            "C",
            "D",
            "E",
            "F",
          ],
          "subscribers": Array [
            Object {
              "batchSize": 5,
              "functionHandle": "\${root/my_queue-OnMessage-e645076f#attrs.handle}",
            },
          ],
          "timeout": 30,
        },
        "type": "wingsdk.cloud.Queue",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "app.wsim/tree.json": Object {
    "tree": Object {
      "children": Object {
        "Handler": Object {
          "attributes": Object {
            "wing:resource:connections": Array [
              Object {
                "direction": "inbound",
                "implicit": false,
                "relationship": "handle",
                "resource": "root/my_queue-OnMessage-e645076f",
              },
            ],
            "wing:resource:stateful": false,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.1.228",
          },
          "display": Object {
            "description": "An inflight resource",
            "hidden": true,
            "title": "Inflight",
          },
          "id": "Handler",
          "path": "root/Handler",
        },
        "WingLogger": Object {
          "attributes": Object {
            "wing:resource:connections": Array [
              Object {
                "direction": "inbound",
                "implicit": true,
                "relationship": "print",
                "resource": "root/my_queue-OnMessage-e645076f",
              },
            ],
            "wing:resource:stateful": true,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.1.228",
          },
          "display": Object {
            "description": "A cloud logging facility",
            "hidden": true,
            "title": "Logger",
          },
          "id": "WingLogger",
          "path": "root/WingLogger",
        },
        "my_queue": Object {
          "attributes": Object {
            "wing:resource:connections": Array [
              Object {
                "direction": "outbound",
                "implicit": false,
                "relationship": "on_message",
                "resource": "root/my_queue-OnMessage-e645076f",
              },
            ],
            "wing:resource:stateful": true,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.1.228",
          },
          "display": Object {
            "description": "A distributed message queue",
            "title": "Queue",
          },
          "id": "my_queue",
          "path": "root/my_queue",
        },
        "my_queue-OnMessage-e645076f": Object {
          "attributes": Object {
            "wing:resource:connections": Array [
              Object {
                "direction": "outbound",
                "implicit": false,
                "relationship": "handle",
                "resource": "root/Handler",
              },
              Object {
                "direction": "outbound",
                "implicit": true,
                "relationship": "print",
                "resource": "root/WingLogger",
              },
              Object {
                "direction": "inbound",
                "implicit": false,
                "relationship": "on_message",
                "resource": "root/my_queue",
              },
            ],
            "wing:resource:stateful": false,
          },
          "children": Object {
            "Code": Object {
              "constructInfo": Object {
                "fqn": "constructs.Construct",
                "version": "10.1.228",
              },
              "id": "Code",
              "path": "root/my_queue-OnMessage-e645076f/Code",
            },
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.1.228",
          },
          "display": Object {
            "description": "A cloud function (FaaS)",
            "title": "Function",
          },
          "id": "my_queue-OnMessage-e645076f",
          "path": "root/my_queue-OnMessage-e645076f",
        },
        "my_queue-OnMessageHandler-e645076f": Object {
          "attributes": Object {
            "wing:resource:connections": Array [],
            "wing:resource:stateful": false,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.1.228",
          },
          "id": "my_queue-OnMessageHandler-e645076f",
          "path": "root/my_queue-OnMessageHandler-e645076f",
        },
      },
      "constructInfo": Object {
        "fqn": "constructs.Construct",
        "version": "10.1.228",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
  "assets/my_queue-onmessage-e645076f_c89a8f49/index.js": "var __defProp = Object.defineProperty;
var __getOwnPropDesc = Object.getOwnPropertyDescriptor;
var __getOwnPropNames = Object.getOwnPropertyNames;
var __hasOwnProp = Object.prototype.hasOwnProperty;
var __esm = (fn, res) => function __init() {
  return fn && (res = (0, fn[__getOwnPropNames(fn)[0]])(fn = 0)), res;
};
var __export = (target, all) => {
  for (var name in all)
    __defProp(target, name, { get: all[name], enumerable: true });
};
var __copyProps = (to, from, except, desc) => {
  if (from && typeof from === \\"object\\" || typeof from === \\"function\\") {
    for (let key of __getOwnPropNames(from))
      if (!__hasOwnProp.call(to, key) && key !== except)
        __defProp(to, key, { get: () => from[key], enumerable: !(desc = __getOwnPropDesc(from, key)) || desc.enumerable });
  }
  return to;
};
var __toCommonJS = (mod) => __copyProps(__defProp({}, \\"__esModule\\", { value: true }), mod);

var queue_onmessage_inflight_exports = {};
__export(queue_onmessage_inflight_exports, {
  QueueOnMessageHandlerClient: () => QueueOnMessageHandlerClient
});
var QueueOnMessageHandlerClient;
var init_queue_onmessage_inflight = __esm({
  \\"[REDACTED]/wingsdk/src/target-sim/queue.onmessage.inflight.ts\\"() {
    \\"use strict\\";
    QueueOnMessageHandlerClient = class {
      constructor({ handler }) {
        this.handler = handler;
      }
      async handle(event) {
        let parsed = JSON.parse(event);
        if (!parsed.messages)
          throw new Error('No \\"messages\\" field in event.');
        for (const $message of parsed.messages) {
          await this.handler.handle($message);
        }
      }
    };
  }
});

var $logger = function(env) {
  let handle = process.env[env];
  if (!handle) {
    throw new Error(\\"Missing environment variable: \\" + env);
  }
  return $simulator.findInstance(handle);
}(\\"LOGGER_HANDLE_76f7e65b\\");
console.log = (...args) => $logger.print(...args);
exports.handler = async function(event) {
  return await new (init_queue_onmessage_inflight(), __toCommonJS(queue_onmessage_inflight_exports)).QueueOnMessageHandlerClient({ handler: new (function() {
    return class Handler {
      constructor(clients) {
        for (const [name, client] of Object.entries(clients)) {
          this[name] = client;
        }
      }
      async handle(message) {
        if (message === \\"BAD MESSAGE\\") {
          throw new Error(\\"ERROR\\");
        }
      }
    };
  }())({}) }).handle(event);
};
",
  "tree.json": Object {
    "tree": Object {
      "children": Object {
        "Handler": Object {
          "attributes": Object {
            "wing:resource:connections": Array [
              Object {
                "direction": "inbound",
                "implicit": false,
                "relationship": "handle",
                "resource": "root/my_queue-OnMessage-e645076f",
              },
            ],
            "wing:resource:stateful": false,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.1.228",
          },
          "display": Object {
            "description": "An inflight resource",
            "hidden": true,
            "title": "Inflight",
          },
          "id": "Handler",
          "path": "root/Handler",
        },
        "WingLogger": Object {
          "attributes": Object {
            "wing:resource:connections": Array [
              Object {
                "direction": "inbound",
                "implicit": true,
                "relationship": "print",
                "resource": "root/my_queue-OnMessage-e645076f",
              },
            ],
            "wing:resource:stateful": true,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.1.228",
          },
          "display": Object {
            "description": "A cloud logging facility",
            "hidden": true,
            "title": "Logger",
          },
          "id": "WingLogger",
          "path": "root/WingLogger",
        },
        "my_queue": Object {
          "attributes": Object {
            "wing:resource:connections": Array [
              Object {
                "direction": "outbound",
                "implicit": false,
                "relationship": "on_message",
                "resource": "root/my_queue-OnMessage-e645076f",
              },
            ],
            "wing:resource:stateful": true,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.1.228",
          },
          "display": Object {
            "description": "A distributed message queue",
            "title": "Queue",
          },
          "id": "my_queue",
          "path": "root/my_queue",
        },
        "my_queue-OnMessage-e645076f": Object {
          "attributes": Object {
            "wing:resource:connections": Array [
              Object {
                "direction": "outbound",
                "implicit": false,
                "relationship": "handle",
                "resource": "root/Handler",
              },
              Object {
                "direction": "outbound",
                "implicit": true,
                "relationship": "print",
                "resource": "root/WingLogger",
              },
              Object {
                "direction": "inbound",
                "implicit": false,
                "relationship": "on_message",
                "resource": "root/my_queue",
              },
            ],
            "wing:resource:stateful": false,
          },
          "children": Object {
            "Code": Object {
              "constructInfo": Object {
                "fqn": "constructs.Construct",
                "version": "10.1.228",
              },
              "id": "Code",
              "path": "root/my_queue-OnMessage-e645076f/Code",
            },
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.1.228",
          },
          "display": Object {
            "description": "A cloud function (FaaS)",
            "title": "Function",
          },
          "id": "my_queue-OnMessage-e645076f",
          "path": "root/my_queue-OnMessage-e645076f",
        },
        "my_queue-OnMessageHandler-e645076f": Object {
          "attributes": Object {
            "wing:resource:connections": Array [],
            "wing:resource:stateful": false,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.1.228",
          },
          "id": "my_queue-OnMessageHandler-e645076f",
          "path": "root/my_queue-OnMessageHandler-e645076f",
        },
      },
      "constructInfo": Object {
        "fqn": "constructs.Construct",
        "version": "10.1.228",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`queue with one subscriber, default batch size of 1 1`] = `
Array [
  "wingsdk.cloud.Logger created.",
  "wingsdk.cloud.Function created.",
  "wingsdk.cloud.Queue created.",
  "Push (message=A).",
  "Push (message=B).",
  "Sending messages (messages=[\\"A\\"], subscriber=sim-1).",
  "Sending messages (messages=[\\"B\\"], subscriber=sim-1).",
  "Invoke (payload=\\"\\"{\\\\\\"messages\\\\\\":[\\\\\\"A\\\\\\"]}\\"\\").",
  "Invoke (payload=\\"\\"{\\\\\\"messages\\\\\\":[\\\\\\"B\\\\\\"]}\\"\\").",
  "wingsdk.cloud.Queue deleted.",
  "wingsdk.cloud.Function deleted.",
  "wingsdk.cloud.Logger deleted.",
]
`;

exports[`queue with one subscriber, default batch size of 1 2`] = `
Object {
  "app.wsim/simulator.json": Object {
    "resources": Array [
      Object {
        "attrs": Object {},
        "path": "root/WingLogger",
        "props": Object {},
        "type": "wingsdk.cloud.Logger",
      },
      Object {
        "attrs": Object {},
        "path": "root/my_queue-OnMessage-e645076f",
        "props": Object {
          "environmentVariables": Object {
            "LOGGER_HANDLE_76f7e65b": "\${root/WingLogger#attrs.handle}",
          },
          "sourceCodeFile": "assets/my_queue-onmessage-e645076f_c89a8f49/index.js",
          "sourceCodeLanguage": "javascript",
          "timeout": 60000,
        },
        "type": "wingsdk.cloud.Function",
      },
      Object {
        "attrs": Object {},
        "path": "root/my_queue",
        "props": Object {
          "initialMessages": Array [],
          "subscribers": Array [
            Object {
              "batchSize": 1,
              "functionHandle": "\${root/my_queue-OnMessage-e645076f#attrs.handle}",
            },
          ],
          "timeout": 30,
        },
        "type": "wingsdk.cloud.Queue",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "app.wsim/tree.json": Object {
    "tree": Object {
      "children": Object {
        "Handler": Object {
          "attributes": Object {
            "wing:resource:connections": Array [
              Object {
                "direction": "inbound",
                "implicit": false,
                "relationship": "handle",
                "resource": "root/my_queue-OnMessage-e645076f",
              },
            ],
            "wing:resource:stateful": false,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.1.228",
          },
          "display": Object {
            "description": "An inflight resource",
            "hidden": true,
            "title": "Inflight",
          },
          "id": "Handler",
          "path": "root/Handler",
        },
        "WingLogger": Object {
          "attributes": Object {
            "wing:resource:connections": Array [
              Object {
                "direction": "inbound",
                "implicit": true,
                "relationship": "print",
                "resource": "root/my_queue-OnMessage-e645076f",
              },
            ],
            "wing:resource:stateful": true,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.1.228",
          },
          "display": Object {
            "description": "A cloud logging facility",
            "hidden": true,
            "title": "Logger",
          },
          "id": "WingLogger",
          "path": "root/WingLogger",
        },
        "my_queue": Object {
          "attributes": Object {
            "wing:resource:connections": Array [
              Object {
                "direction": "outbound",
                "implicit": false,
                "relationship": "on_message",
                "resource": "root/my_queue-OnMessage-e645076f",
              },
            ],
            "wing:resource:stateful": true,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.1.228",
          },
          "display": Object {
            "description": "A distributed message queue",
            "title": "Queue",
          },
          "id": "my_queue",
          "path": "root/my_queue",
        },
        "my_queue-OnMessage-e645076f": Object {
          "attributes": Object {
            "wing:resource:connections": Array [
              Object {
                "direction": "outbound",
                "implicit": false,
                "relationship": "handle",
                "resource": "root/Handler",
              },
              Object {
                "direction": "outbound",
                "implicit": true,
                "relationship": "print",
                "resource": "root/WingLogger",
              },
              Object {
                "direction": "inbound",
                "implicit": false,
                "relationship": "on_message",
                "resource": "root/my_queue",
              },
            ],
            "wing:resource:stateful": false,
          },
          "children": Object {
            "Code": Object {
              "constructInfo": Object {
                "fqn": "constructs.Construct",
                "version": "10.1.228",
              },
              "id": "Code",
              "path": "root/my_queue-OnMessage-e645076f/Code",
            },
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.1.228",
          },
          "display": Object {
            "description": "A cloud function (FaaS)",
            "title": "Function",
          },
          "id": "my_queue-OnMessage-e645076f",
          "path": "root/my_queue-OnMessage-e645076f",
        },
        "my_queue-OnMessageHandler-e645076f": Object {
          "attributes": Object {
            "wing:resource:connections": Array [],
            "wing:resource:stateful": false,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.1.228",
          },
          "id": "my_queue-OnMessageHandler-e645076f",
          "path": "root/my_queue-OnMessageHandler-e645076f",
        },
      },
      "constructInfo": Object {
        "fqn": "constructs.Construct",
        "version": "10.1.228",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
  "assets/my_queue-onmessage-e645076f_c89a8f49/index.js": "var __defProp = Object.defineProperty;
var __getOwnPropDesc = Object.getOwnPropertyDescriptor;
var __getOwnPropNames = Object.getOwnPropertyNames;
var __hasOwnProp = Object.prototype.hasOwnProperty;
var __esm = (fn, res) => function __init() {
  return fn && (res = (0, fn[__getOwnPropNames(fn)[0]])(fn = 0)), res;
};
var __export = (target, all) => {
  for (var name in all)
    __defProp(target, name, { get: all[name], enumerable: true });
};
var __copyProps = (to, from, except, desc) => {
  if (from && typeof from === \\"object\\" || typeof from === \\"function\\") {
    for (let key of __getOwnPropNames(from))
      if (!__hasOwnProp.call(to, key) && key !== except)
        __defProp(to, key, { get: () => from[key], enumerable: !(desc = __getOwnPropDesc(from, key)) || desc.enumerable });
  }
  return to;
};
var __toCommonJS = (mod) => __copyProps(__defProp({}, \\"__esModule\\", { value: true }), mod);

var queue_onmessage_inflight_exports = {};
__export(queue_onmessage_inflight_exports, {
  QueueOnMessageHandlerClient: () => QueueOnMessageHandlerClient
});
var QueueOnMessageHandlerClient;
var init_queue_onmessage_inflight = __esm({
  \\"[REDACTED]/wingsdk/src/target-sim/queue.onmessage.inflight.ts\\"() {
    \\"use strict\\";
    QueueOnMessageHandlerClient = class {
      constructor({ handler }) {
        this.handler = handler;
      }
      async handle(event) {
        let parsed = JSON.parse(event);
        if (!parsed.messages)
          throw new Error('No \\"messages\\" field in event.');
        for (const $message of parsed.messages) {
          await this.handler.handle($message);
        }
      }
    };
  }
});

var $logger = function(env) {
  let handle = process.env[env];
  if (!handle) {
    throw new Error(\\"Missing environment variable: \\" + env);
  }
  return $simulator.findInstance(handle);
}(\\"LOGGER_HANDLE_76f7e65b\\");
console.log = (...args) => $logger.print(...args);
exports.handler = async function(event) {
  return await new (init_queue_onmessage_inflight(), __toCommonJS(queue_onmessage_inflight_exports)).QueueOnMessageHandlerClient({ handler: new (function() {
    return class Handler {
      constructor(clients) {
        for (const [name, client] of Object.entries(clients)) {
          this[name] = client;
        }
      }
      async handle(message) {
        if (message === \\"BAD MESSAGE\\") {
          throw new Error(\\"ERROR\\");
        }
      }
    };
  }())({}) }).handle(event);
};
",
  "tree.json": Object {
    "tree": Object {
      "children": Object {
        "Handler": Object {
          "attributes": Object {
            "wing:resource:connections": Array [
              Object {
                "direction": "inbound",
                "implicit": false,
                "relationship": "handle",
                "resource": "root/my_queue-OnMessage-e645076f",
              },
            ],
            "wing:resource:stateful": false,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.1.228",
          },
          "display": Object {
            "description": "An inflight resource",
            "hidden": true,
            "title": "Inflight",
          },
          "id": "Handler",
          "path": "root/Handler",
        },
        "WingLogger": Object {
          "attributes": Object {
            "wing:resource:connections": Array [
              Object {
                "direction": "inbound",
                "implicit": true,
                "relationship": "print",
                "resource": "root/my_queue-OnMessage-e645076f",
              },
            ],
            "wing:resource:stateful": true,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.1.228",
          },
          "display": Object {
            "description": "A cloud logging facility",
            "hidden": true,
            "title": "Logger",
          },
          "id": "WingLogger",
          "path": "root/WingLogger",
        },
        "my_queue": Object {
          "attributes": Object {
            "wing:resource:connections": Array [
              Object {
                "direction": "outbound",
                "implicit": false,
                "relationship": "on_message",
                "resource": "root/my_queue-OnMessage-e645076f",
              },
            ],
            "wing:resource:stateful": true,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.1.228",
          },
          "display": Object {
            "description": "A distributed message queue",
            "title": "Queue",
          },
          "id": "my_queue",
          "path": "root/my_queue",
        },
        "my_queue-OnMessage-e645076f": Object {
          "attributes": Object {
            "wing:resource:connections": Array [
              Object {
                "direction": "outbound",
                "implicit": false,
                "relationship": "handle",
                "resource": "root/Handler",
              },
              Object {
                "direction": "outbound",
                "implicit": true,
                "relationship": "print",
                "resource": "root/WingLogger",
              },
              Object {
                "direction": "inbound",
                "implicit": false,
                "relationship": "on_message",
                "resource": "root/my_queue",
              },
            ],
            "wing:resource:stateful": false,
          },
          "children": Object {
            "Code": Object {
              "constructInfo": Object {
                "fqn": "constructs.Construct",
                "version": "10.1.228",
              },
              "id": "Code",
              "path": "root/my_queue-OnMessage-e645076f/Code",
            },
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.1.228",
          },
          "display": Object {
            "description": "A cloud function (FaaS)",
            "title": "Function",
          },
          "id": "my_queue-OnMessage-e645076f",
          "path": "root/my_queue-OnMessage-e645076f",
        },
        "my_queue-OnMessageHandler-e645076f": Object {
          "attributes": Object {
            "wing:resource:connections": Array [],
            "wing:resource:stateful": false,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.1.228",
          },
          "id": "my_queue-OnMessageHandler-e645076f",
          "path": "root/my_queue-OnMessageHandler-e645076f",
        },
      },
      "constructInfo": Object {
        "fqn": "constructs.Construct",
        "version": "10.1.228",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;
